:lipstick: Fix current xp alignment

--- a/src/components/account/account.scss
+++ b/src/components/account/account.scss
@@ -43,7 +43,7 @@
         p {
           color: white;
           font-size: 14px;
-          margin: 0 0 0 5px;
+          margin: -3px 0 0 5px;
         }
       }
     }
@@ -84,7 +84,7 @@
 
         p {
           color: white;
-          margin: -18px 0 0 0;
+          margin: -20px 0 0 0;
           z-index: 10;
           text-align: center;
           font-size: 14.5px;
@@ -107,7 +107,6 @@
       border: 2px solid #41569F;
       color: white;
       font-size: 15px;
-      font-family: 'Roboto', sans-serif;
 
       &:focus {
         outline: none;
@@ -122,7 +121,6 @@
     p {
       font-size: 14px;
       text-align: center;
-      font-family: 'Roboto', sans-serif;
       color: white;
     }
   }
